--- a/static/index.html
+++ b/static/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <title>MERN Stack React App</title>
-  <script src="https://npmcdn.com/react@15.3.0/dist/react.js"></script>
-  <script src="https://npmcdn.com/react-dom@15.3.0/dist/react-dom.js"></script>
-  <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
-  <script src="https://npmcdn.com/jquery@3.1.0/dist/jquery.min.js"></script>
-  <script src="https://npmcdn.com/remarkable@1.6.2/dist/remarkable.min.js"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
-
-<body>
-   <div id="example"></div>
-   <script src="/App.js" type="text/javascript"></script>
- </body>
-
- </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+  <head>
+    <meta charset="UTF-8" />
+    <title>Bug Tracker - a React tutorial using MERN</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
+  </head>
+  <body>
+    <div id="main"></div>
+    <script src="/App.js" type="text/javascript"></script>
+  </body>
 </html>
